[gd_scene load_steps=29 format=2]

[ext_resource path="res://Audio/RandomAudio3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois3.wav" type="AudioStream" id=2]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois6.wav" type="AudioStream" id=3]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois8.wav" type="AudioStream" id=4]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois10.wav" type="AudioStream" id=5]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois7.wav" type="AudioStream" id=6]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois4.wav" type="AudioStream" id=7]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois9.wav" type="AudioStream" id=8]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois2.wav" type="AudioStream" id=9]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois5.wav" type="AudioStream" id=10]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois11.wav" type="AudioStream" id=11]
[ext_resource path="res://Cargo/Sounds/WoodOnWood/boisbois1.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/CollisionPlayer.gd" type="Script" id=13]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal4.wav" type="AudioStream" id=14]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal6.wav" type="AudioStream" id=15]
[ext_resource path="res://Cargo/Sounds/MetalOnWood/metalbois1.wav" type="AudioStream" id=16]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal7.wav" type="AudioStream" id=17]
[ext_resource path="res://Cargo/Sounds/MetalOnWood/metalbois5.wav" type="AudioStream" id=18]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal9.wav" type="AudioStream" id=19]
[ext_resource path="res://Cargo/Sounds/MetalOnWood/metalbois3.wav" type="AudioStream" id=20]
[ext_resource path="res://Cargo/Sounds/MetalOnWood/metalbois6.wav" type="AudioStream" id=21]
[ext_resource path="res://Cargo/Sounds/MetalOnWood/metalbois2.wav" type="AudioStream" id=22]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal5.wav" type="AudioStream" id=23]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal1.wav" type="AudioStream" id=24]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal2.wav" type="AudioStream" id=25]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal8.wav" type="AudioStream" id=26]
[ext_resource path="res://Cargo/Sounds/MetalOnWood/metalbois4.wav" type="AudioStream" id=27]
[ext_resource path="res://Cargo/Sounds/MetalOnMetal/metalmetal3.wav" type="AudioStream" id=28]

[node name="CollisionPlayer" type="Node"]
script = ExtResource( 13 )

[node name="WoodOnWood" parent="." instance=ExtResource( 1 )]
streams = [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 11 ) ]

[node name="MetalOnMetal" parent="." instance=ExtResource( 1 )]
streams = [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 26 ), ExtResource( 19 ) ]

[node name="MetalOnWood" parent="." instance=ExtResource( 1 )]
streams = [ ExtResource( 16 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 21 ) ]
